# gdice

./: .gitignore  Makefile  Makefile.am  README  README.md  autogen.sh  common.mk  configure.ac
debian/: changelog  control  copyright
po/: POTFILES.in  POTFILES.skip  fi.po  gdice.pot
res/: Green-d10.svg.md  Makefile.am  com.github.fluks.GDice.gschema.xml  gdice.css  gdice.desktop.in  gdice.glade
src/: Makefile  Makefile.am  config.h  config.h.orig  de.l  de.y  diceexpr.h  main.c  numflow.h  sound.c  sound.h  str.c  str.h
